# zolvency-zpay-mcp

./: .env  .env.example  README.md  pyproject.toml  server.py
tests/: test_init.py  test_logic.py  test_mcp.py  test_server_v2.py  test_sovereign.py  test_tools_v2.py
tests/manual/: call_get_balance.py  call_handshake.py  check_mandates.py  mcp_client.py  test_client.py
tools/: manual_handshake.py  perform_scan.py
zpay_mcp/: config.py  server.py
zpay_mcp.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
