[project]
name = "zpay-mcp"
version = "0.1.0"
description = "Sovereign MCP Server for the ZPay Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[fastmcp]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "stellar-sdk>=9.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=42.0.0",
]

[project.scripts]
zpay-mcp = "zpay_mcp.server:mcp.run"

[tool.setuptools]
packages = ["zpay_mcp"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
